--- a/client/src/app/components/header-section/header-section.component.scss
+++ b/client/src/app/components/header-section/header-section.component.scss
@@ -202,6 +202,9 @@ small {
 }
 
 @media only screen and (max-width: 991px) {
+  :host {
+    margin-top: 60px;
+  }
   .user-row {
     padding: 20px 20px;
     flex-direction: column;
