--- a/client/src/app/components/main-toolbar/main-toolbar.component.html
+++ b/client/src/app/components/main-toolbar/main-toolbar.component.html
@@ -48,7 +48,7 @@
         </ng-container>
     </mat-nav-list>
   </mat-sidenav>
-  <mat-sidenav-content>
+  <mat-sidenav-content id="sidenav-content">
     <mat-toolbar color="primary">
       <ng-container *ngIf="!isCreatingProfile()">
         <button
