--- a/client/src/app/pages/profile/user-profile/user-profile.component.html
+++ b/client/src/app/pages/profile/user-profile/user-profile.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="!isProfileLoading" class="profile-header">
-  <header-section [editMode]="isEditProfile" [generalInfo]="userGeneralInfo" (updatedGeneralInfoData)="onChangedGeneralInfoData($event)"></header-section>
+  <header-section [editMode]="isEditProfile" [generalInfo]="userGeneralInfo" (updatedGeneralInfoData)="onChangedGeneralInfoData($event)" id="header-section"></header-section>
 </ng-container>
 
 <ng-container *ngIf="!isProfileLoading">
@@ -23,7 +23,7 @@
     [editMode]="isEditProfile"
     [class.edit-mode]="isEditProfile"
   ></main-section>
-  <nav-section [navMenu]="navMenu" [editMode]="isEditProfile" (clickUpdate)="onClickUpdate()" [isOpened]="isNavMenuOpened" [class.nav-hidden]="!((isHandset$ | async) && isNavMenuOpened)" [class.nav-absolute]="(isHandset$ | async)" id="nav-section"></nav-section>
+  <nav-section [navMenu]="navMenu" [editMode]="isEditProfile" (clickUpdate)="onClickUpdate()" [isOpened]="isNavMenuOpened" [class.nav-hidden]="!((isHandset$ | async) && isNavMenuOpened)" id="nav-section"></nav-section>
 </ng-container>
 
 <ng-container *ngIf="isProfileLoading">
