--- a/client/src/app/components/nav-section/nav-section.component.html
+++ b/client/src/app/components/nav-section/nav-section.component.html
@@ -1,14 +1,16 @@
 
 <nav *ngIf="navMenu && navMenu.length > 0">
-  <div class="nav-section" *ngFor="let menu of navMenu; let i = index;" [class.active]="i === navIndex">
-    <h3 (click)="onSelectNavMenu(i)">{{menu.title}}</h3>
-    <mat-icon>keyboard_arrow_right</mat-icon>
-    <ol *ngIf="menu.items.length > 0">
-      <ng-container *ngFor="let item of menu.items">
-        <li *ngIf="item.visible || editMode">{{item.title}}</li>
-      </ng-container>
-    </ol>
-  </div>
+  <ng-container  *ngFor="let menu of navMenu; let i = index;" >
+    <div *ngIf="!editMode || (editMode && i === navIndex)" class="nav-section" [class.active]="i === navIndex">
+      <h3 (click)="onSelectNavMenu(i)">{{menu.title}}</h3>
+      <mat-icon>keyboard_arrow_right</mat-icon>
+      <ol *ngIf="menu.items.length > 0">
+        <ng-container *ngFor="let item of menu.items">
+          <li *ngIf="item.visible || editMode">{{item.title}}</li>
+        </ng-container>
+      </ol>
+    </div>
+  </ng-container>
   <div *ngIf="editMode" class="btn-section">
     <action-button class="nav-btn" type="flat" title="Update Changes" color="primary" (click)="onClickUpdate()"></action-button>
   </div>  
