--- a/client/src/app/pages/registration/registration.component.html
+++ b/client/src/app/pages/registration/registration.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="container__left">
     <div class="row__info">
-      <h1>Career Fair</h1>
+      <h1>yourCareerFair</h1>
       <p>
-        Career Fair is a free online job and internship clearing-house. Its primary goal is to reduce the effects of frictional unemployment through means of faster and more effective search processes, centralization of the application process, and the mitigation of necessary work required for simultaneous application submissions and mass application handling.
+        yourCareerFair offers unparalleled, free, search and screening functionality for both applicants and recruiters. Using proprietry machine learning and AI algorithms, this platform is capable of comprehensively assessing the estimated compatibility of any user and position pair in real time. In addition, yourCareerFair leverages this algorithm in it's search process, allowing for applicants and recruiters to search for positions and applicants based on, in part, qualification level estimates. For those who prefer a more traditional search, the search engine also allows for searches filtered on other variables such as required skills, education, and location. To make the lives of our users easier, yourCareerFair also handles bulk/one-click application submissions and application tracking services completely free of charge.
       </p>
       <a mat-button disableRipple="true" routerLink="/login">Read More</a>
     </div>
@@ -49,17 +49,11 @@
       </mat-form-field>
     </div>
     <div class="row__checkbox">
-      <round-checkbox id="agree-term" title="I Agree Careerfair's Terms & Conditions" [checked]="isAgreeTerm" (statusChange)="toggleAgreeTerm($event)"></round-checkbox>
+      <round-checkbox id="agree-term" title="I Agree to CareerFair's Terms & Conditions" [checked]="isAgreeTerm" (statusChange)="toggleAgreeTerm($event)"></round-checkbox>
     </div>
     <div class="row__buttons">
       <action-button type="stroked" title="Login" (click)="navigateToLogin()"></action-button>
       <action-button type="flat" title="Create Account" color="primary" (click)="signUp()" [disabled]="!(registrationForm.valid && isAgreeTerm)"></action-button>
-    </div>
-    <p>Or you can join with</p>
-    <div class="row__social_icons">
-      <img src="assets/icons/ic_google_circle.svg">
-      <img src="assets/icons/ic_facebook_circle.svg">
-      <img src="assets/icons/ic_twitter_circle.svg">
     </div>
     <div class="row__copyright">
       <span>©2019 <a href="#">yourcareerfair.com</a> | Cookies, Privacy and Terms</span>
