--- a/client/src/app/pages/registration/registration.component.html
+++ b/client/src/app/pages/registration/registration.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="container__left">
     <div class="row__info">
-      <h1>yourCareerFair</h1>
+      <h1>Welcome to yourCareerFair</h1>
       <p>
-        yourCareerFair offers unparalleled, free, search and screening functionality for both applicants and recruiters. Using proprietry machine learning and AI algorithms, this platform is capable of comprehensively assessing the estimated compatibility of any user and position pair in real time. In addition, yourCareerFair leverages this algorithm in it's search process, allowing for applicants and recruiters to search for positions and applicants based on, in part, qualification level estimates. For those who prefer a more traditional search, the search engine also allows for searches filtered on other variables such as required skills, education, and location. To make the lives of our users easier, yourCareerFair also handles bulk/one-click application submissions and application tracking services completely free of charge.
+        yourCareerFair offers unparalleled, free, search and screening functionality for both applicants and recruiters. Using standardized user inputs as well as proprietary machine learning and AI algorithms, this platform is capable of comprehensively assessing the estimated compatibility of any user and position pair in real time for users to see. In addition, yourCareerFair leverages this algorithm in it's search process, allowing for applicants and recruiters to search for positions and applicants based on, in part, qualification level estimates. For those who prefer a more traditional search, the search engine also allows for searches filtered on other variables such as required skills, education, and title. Our hope is that these utilities are effective at attenuating the pernicious effects of labor market inefficiency and help all those who desire adequate, interesting, and fair work to find it.
       </p>
       <a mat-button disableRipple="true" routerLink="/login">Read More</a>
     </div>
