CAR-000 Changed switch profile to 'Recruiter App'

--- a/client/src/app/components/main-toolbar/main-toolbar.component.html
+++ b/client/src/app/components/main-toolbar/main-toolbar.component.html
@@ -124,7 +124,7 @@
           App Settings
         </a>
         <a routerLink='switch' routerLinkActive="active-link" class="dropdown-href">
-          Switch Profile
+          Recruiter App
         </a>
         <a routerLink='login' (click)="logOut()" routerLinkActive="active-link" class="dropdown-href">
           Logout
