Fix navigation menu updating issue
- Navigation bar will register or remove menu items once profile data updated.

--- a/client/src/app/pages/profile/user-profile/user-profile.component.html
+++ b/client/src/app/pages/profile/user-profile/user-profile.component.html
@@ -23,6 +23,7 @@
     [externalResourcesList]="externalResourcesList"
     [editMode]="editMode"
     [class.edit-mode]="editMode"
+    (navMenuVisibilityChanged)="onChangeNavMenuVisibility($event)"
   ></main-section>
   <nav-section [navMenu]="navMenu" [editMode]="editMode" [navIndex]="selectedNavMenuIndex" (clickUpdate)="onClickUpdate()" (selectNavMenu)="onSelectNavMenu($event)" [isOpened]="isNavMenuOpened" [class.nav-hidden]="!((isHandset$ | async) && isNavMenuOpened)" id="nav-section"></nav-section>
 </ng-container>
