Style update - Removed box shadow - Changed background color

--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -214,6 +214,9 @@ $container-max-width: 1365px;
 $mat-form-bg-color: #ecf3fc;
 $secondary-bg-color: #f5f8fa;
 $third-bg-color: #f4f5f8;
+$bg-color-1: #f2f2f4;
+$bg-color-2: #f2f3f7;
+
 $mat-form-border-color: #dae4f1;
 $mat-form-prefix-color: #525252;
 
