--- a/client/src/app/components/main-section/main-section.component.scss
+++ b/client/src/app/components/main-section/main-section.component.scss
@@ -5,7 +5,7 @@
   // padding: 15px;
   // min-height: 100%;
   border-radius: 5px;
-  box-shadow: 0px 3px 10px rgba(0,0,0,0.1);
+  // box-shadow: 0px 3px 10px rgba(0,0,0,0.1);
   background-color: transparent;
   &.edit-mode {
     box-shadow: none;
@@ -49,7 +49,8 @@
       line-height: 24px;
     }
     &.edit-mode {
-      box-shadow: 0px 3px 10px rgba(0,0,0,0.1);
+      // box-shadow: 0px 3px 10px rgba(0,0,0,0.1);
+      border-bottom: none;
       margin-bottom: 10px;
     }
   }
