--- a/client/src/app/components/nav-section/nav-section.component.scss
+++ b/client/src/app/components/nav-section/nav-section.component.scss
@@ -4,7 +4,7 @@
   grid-area: left;
   padding-left: 40px;
   box-sizing: border-box;
-  background-color: $secondary-bg-color;
+  background-color: $bg-color-1;
   nav {
     .nav-section {
       position: relative;
