--- a/client/src/app/pages/user-profile/user-profile.component.scss
+++ b/client/src/app/pages/user-profile/user-profile.component.scss
@@ -11,7 +11,7 @@
   ;
   grid-column-gap: 40px;
   padding-bottom: 80px;
-  background-color: $secondary-bg-color;
+  background-color: $bg-color-1;
   min-height: calc(100vh - 70px - 80px);
 }
 
@@ -81,8 +81,8 @@ legend {
       top: 70px;
       left: 0;
       width: 100%;
-      background-color: $secondary-bg-color;
-      box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.125);
+      background-color: $bg-color-1;
+      box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.125);
       z-index: 100;
     .nav-title {
       cursor: pointer;
