--- a/client/src/app/components/header-section/header-section.component.html
+++ b/client/src/app/components/header-section/header-section.component.html
@@ -40,7 +40,7 @@
         </div>
       </div>
       <div class="user-status">
-        <simple-tag  title="Actively Looking For Job" onlineTag="true" [active]="true"></simple-tag>
+        <simple-tag  [title]="profileStatuses[generalInfo.is_looking]" onlineTag="true" [active]="generalInfo.is_looking === 1" (click)="onChangeProfileStatus(generalInfo.is_looking === 1)"></simple-tag>
         <img src="assets/icons/ic_mail.svg">
       </div>
     </ng-container>
