--- a/client/src/app/pages/profile/user-profile/user-profile.component.html
+++ b/client/src/app/pages/profile/user-profile/user-profile.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="!isProfileLoading" class="profile-header">
-  <header-section [editMode]="editMode" [generalInfo]="userGeneralInfo" (updatedGeneralInfoData)="onChangedGeneralInfoData($event)" id="header-section"></header-section>
+  <header-section [editMode]="editMode" [generalInfo]="userGeneralInfo" (updatedGeneralInfoData)="onChangedGeneralInfoData($event)" (updatedProfileStatus)="onChangeProfileStatus($event)" id="header-section"></header-section>
 </ng-container>
 
 <ng-container *ngIf="!isProfileLoading">
