--- a/client/src/app/pages/user-profile/user-profile.component.scss
+++ b/client/src/app/pages/user-profile/user-profile.component.scss
@@ -82,7 +82,7 @@ legend {
       left: 0;
       width: 100%;
       background-color: $bg-color-1;
-      box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.125);
+      border-bottom: 1px solid map-get($md-cfaccent, 50);
       z-index: 100;
     .nav-title {
       cursor: pointer;
