--- a/client/src/app/components/nav-section/nav-section.component.scss
+++ b/client/src/app/components/nav-section/nav-section.component.scss
@@ -2,8 +2,7 @@
 
 :host {
   grid-area: left;
-  padding-top: 20px;
-  padding-left: 40px;
+  padding: 20px 0 80px 40px;
   box-sizing: border-box;
   background-color: $bg-color-1;
   position: -webkit-sticky;
