--- a/client/src/app/components/main-section/main-section.component.scss
+++ b/client/src/app/components/main-section/main-section.component.scss
@@ -3,6 +3,7 @@
   grid-area: main;
   margin: 0 40px 0 0;
   padding-top: 20px;
+  padding-bottom: 80px;
   border-radius: 5px;
   background-color: transparent;
   &.edit-mode {
@@ -203,6 +204,8 @@
 @media only screen and (max-width: 991px) {
   :host {
     margin: 0 40px;
+    padding-top: 40px;
+    padding-bottom: 40px;
     .img-tag {
       width: 330px;
     }
