--- a/client/src/app/components/nav-section/nav-section.component.scss
+++ b/client/src/app/components/nav-section/nav-section.component.scss
@@ -70,6 +70,10 @@
     }
     
   }
+  &::-webkit-scrollbar {
+    width: 0;
+    background-color: transparent;
+  }
 }
 
 @media only screen and (max-width: 991px) {
