Fix user introduction updating issue

--- a/client/src/app/pages/profile/user-profile/user-profile.component.html
+++ b/client/src/app/pages/profile/user-profile/user-profile.component.html
@@ -24,6 +24,7 @@
     [editMode]="editMode"
     [class.edit-mode]="editMode"
     (navMenuVisibilityChanged)="onChangeNavMenuVisibility($event)"
+    (userIntroUpdated)="onChangeUserIntro($event)"
   ></main-section>
   <nav-section [navMenu]="navMenu" [editMode]="editMode" [navIndex]="selectedNavMenuIndex" (clickUpdate)="onClickUpdate()" (selectNavMenu)="onSelectNavMenu($event)" (selectedNavItem)="onSelectNavItem($event)" [isOpened]="isNavMenuOpened" [class.nav-hidden]="!((isHandset$ | async) && isNavMenuOpened)" id="nav-section"></nav-section>
 </ng-container>
