--- a/client/src/app/pages/user-profile/user-profile.component.scss
+++ b/client/src/app/pages/user-profile/user-profile.component.scss
@@ -4,7 +4,7 @@
   display: grid;
   grid-template:
   " hero hero " auto 
-  " lege lege " 60px
+  " lege lege " 0
   " left main-nav " 0
   " left main " auto
   / 300px auto
@@ -27,15 +27,7 @@
 
 legend {
   grid-area: lege;
-  padding:0 40px;
-  box-sizing: border-box;
-  @include flex(row, center, space-between);
-  position: -webkit-sticky;
-  position: sticky;
-  top: 70px;
-  background-color: $bg-color-1;
-  border-bottom: 1px solid map-get($md-cfaccent, 50);
-  z-index: 100;
+  display: none;
   .nav-title {
     @include flex(row, center, flex-start);
     h3 {
@@ -88,6 +80,9 @@ legend {
       width: 100%;
       background-color: $bg-color-1;
       border-bottom: 1px solid map-get($md-cfaccent, 50);
+      padding:0 40px;
+      box-sizing: border-box;
+      @include flex(row, center, space-between);
       z-index: 100;
     .nav-title {
       cursor: pointer;
