--- a/client/src/app/components/nav-section/nav-section.component.html
+++ b/client/src/app/components/nav-section/nav-section.component.html
@@ -1,3 +1,6 @@
+<div class="nav-title">
+  <h3 class="section-title">Profile</h3>
+</div>
 
 <nav *ngIf="navMenu && navMenu.length > 0">
   <ng-container  *ngFor="let menu of navMenu; let i = index;" >
