Put delimitating lines between the sections

--- a/client/src/app/components/main-section/main-section.component.scss
+++ b/client/src/app/components/main-section/main-section.component.scss
@@ -6,7 +6,7 @@
   padding-bottom: 80px;
   border-radius: 5px;
   background-color: transparent;
-  :first-child {
+  :nth-child(2) {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
   }
@@ -29,6 +29,7 @@
   .row {
     background: white;
     padding: 25px 20px;
+    border-bottom: 1px solid map-get($md-cfaccent, 50);
     .btn-container {
       text-align: center;
       padding: 10px 0;
