--- a/client/src/app/components/main-section/main-section.component.html
+++ b/client/src/app/components/main-section/main-section.component.html
@@ -83,7 +83,7 @@
     <ng-container *ngFor="let publication of userPublicationsList; let i = index;">
       <div class="editor-container">
         <h4 class="name-field">
-          <a *ngIf="publication.href" target="_blank" class="title" href="//{{publication.href}}">{{publication.publication_title}}</a>
+          <a *ngIf="publication.href" target="_blank" class="title" href="{{publication.href}}">{{publication.publication_title}}</a>
           <ng-container *ngIf="!publication.href">{{publication.publication_title}}</ng-container>
         </h4>
         <mat-icon *ngIf="editMode" class="btn-edit" (click)="openDialog('Publication', userPublicationsList, i)">edit</mat-icon>
@@ -108,7 +108,7 @@
     <ng-container *ngFor="let project of userProjectsList; let i = index;">
       <div class="editor-container">
         <h4 class="name-field">
-          <a *ngIf="project.href" target="_blank" class="title" href="//{{project.href}}">{{project.project_name}}</a>
+          <a *ngIf="project.href" target="_blank" class="title" href="{{project.href}}">{{project.project_name}}</a>
           <ng-container *ngIf="!project.href">{{project.project_name}}</ng-container>
         </h4>
         <mat-icon *ngIf="editMode" class="btn-edit" (click)="openDialog('Project', userProjectsList, i)">edit</mat-icon>
@@ -168,7 +168,7 @@
       <div class="img-tag" *ngFor="let resource of externalResourcesList">
         <img src="assets/icons/ic_{{resource.description.toLowerCase()}}_white.svg">
         <label>{{resource.description}}</label>
-        <a href="//{{resource.link}}" target="_blank">{{resource.link}}</a>
+        <a href="{{resource.link}}" target="_blank">{{resource.link}}</a>
       </div>
     </div>
     <div *ngIf="editMode" class="btn-container">
