--- a/client/src/app/pages/authentication/verification/verification.component.scss
+++ b/client/src/app/pages/authentication/verification/verification.component.scss
@@ -5,6 +5,7 @@
   min-height: calc(100vh - 70px);
   padding: 70px 0;
   box-sizing: border-box;
+  background-color: $bg-color-1;
 }
 
 .container {
