--- a/client/src/app/pages/profile/create-profile/create-profile.component.scss
+++ b/client/src/app/pages/profile/create-profile/create-profile.component.scss
@@ -26,7 +26,7 @@ $profile-form-field-mt: 30px;
   padding: 0 0 70px 0;
   box-sizing: border-box;
   color: rgba($primary-font-color, .84);
-  background-color: $third-bg-color;
+  background-color: $bg-color-1;
   .profile-completion {
     position: relative;
     width: 100%;
